mudança tamanho do gif

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2>Aceita namorar comigo? </h2>
         
 
-        <a href="https://www.youtube.com/watch?v=oRvND-r57Us"><button id="sim" > Sim! </button></a>
+        <a href="https://www.youtube.com/watch?v=oRvND-r57Us" height="42" width="42"><button id="sim" > Sim! </button></a>
         <button onmouseover="fuja()" id="nao"> Não! </button>
         
     </div>
