mudança tamanho gif correta

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
     <div class="painel">
         <h1> Feliz Dia dos Namorados! </h1>
 
-        <img src="/imagens/blendha-.gif" alt="">
+        <img src="/imagens/blendha-.gif" height="42" width="42" alt="">
 
         <h2>Aceita namorar comigo? </h2>
         
 
-        <a href="https://www.youtube.com/watch?v=oRvND-r57Us" height="42" width="42"><button id="sim" > Sim! </button></a>
+        <a href="https://youtu.be/T4cdfRohhcg"><button id="sim" > Sim! </button></a>
         <button onmouseover="fuja()" id="nao"> Não! </button>
         
     </div>
