--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             color: white;
             margin-left: 10px;
         }
+        .circle-image{
+            border-radius: 50px;
+        }
 
     </style>
 
@@ -50,7 +53,9 @@
     <div class="painel">
         <h1> Feliz Dia dos Namorados! </h1>
 
+        <div class = "circle-image"> 
         <img src="/imagens/blendha-.gif" height="400" width="400" alt="">
+        </div>
 
         <h2>Aceita namorar comigo? </h2>
         
