--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h1> Feliz Dia dos Namorados! </h1>
 
         <div class = "circle-image"> 
-        <img src="/imagens/blendha-.gif" height="400" width="400" alt="">
+        <img src="/imagens/blendha-.gif" height="400" width="400" border-radius="50" alt="">
         </div>
 
         <h2>Aceita namorar comigo? </h2>
