tentando arredondar borda

--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
             color: white;
             margin-left: 10px;
         }
-        .circle-image{
-            border-radius: 50px;
-        }
+        
+	    img{border-radius: 20px;}
 
     </style>
 
@@ -54,7 +53,7 @@
         <h1> Feliz Dia dos Namorados! </h1>
 
         <div class = "circle-image"> 
-        <img src="/imagens/blendha-.gif" height="400" width="400" border-radius="50" alt="">
+        <img src="/imagens/blendha-.gif" height="400" width="400" alt="">
         </div>
 
         <h2>Aceita namorar comigo? </h2>
