outro gif teste

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <body>
 
     <div class="painel">
+        <img src="/imagens/te-amo-mucho.gif" height="150" width="150" alt="">
         <h1> Feliz Dia dos Namorados! </h1>
 
         <div class = "circle-image"> 
