outro gif teste

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 </head>
 <body>
-    <img src="/imagens/te-amo-mucho.gif" height="150" width="150" alt="">
+    <center><img src="/imagens/te-amo-mucho.gif" height="150" width="150" alt=""></center>
 
 
     <div class="painel">
