imagem de fundo

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         #sim{
             height: 40px;
             width: 60px;
-            background-color: red;
+            background-image: "background.jpg";
             border: 2px solid white;
             border-radius: 10px;
             color: white;
@@ -58,6 +58,9 @@
         <img src="/imagens/blendha-.gif" height="400" width="400" alt="">
         </div>
 
+        <p>
+            
+        </p>
         <h2>Aceita namorar comigo? </h2>
         
 
