imagem de fundo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <style>
         body{
-            background-image: "background.jpg";
+            background-color: rgb(251, 64, 64);
         }
 
         .painel{
