imagem de fundo

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
         .painel{
             margin: auto;
-            background-color: white;
+            background-image: "background.jpg";
             width: 500px;
             height: 500px;
             border-radius: 20px;
             text-align: center;
-            padding-top: 50px;
+            padding-top: 20px;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         }
         #sim{
@@ -61,7 +61,7 @@
         <p>
             
         </p>
-        <h2>Aceita namorar comigo? </h2>
+        <h2> namorar comigo? </h2>
         
 
         <a href="https://youtu.be/T4cdfRohhcg"><button id="sim" > Sim! </button></a>
