--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
         <img src="/imagens/blendha-.gif" height="400" width="400" alt="">
         </div>
 
-        <p>
-            
+        <p>sou bonita e mole</p>
+        <p>mostro o bom e o ruim não sou tão boa nem tão legal nem tão nada de bom
+            sou eu cada dia
         </p>
         <h2> namorar comigo? </h2>
         
