--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
         <img src="/imagens/blendha-.gif" height="400" width="400" alt="">
         </div>
 
-        <p>sou bonita e mole</p>
+        <p>sou bonita e mole e tenho um passarinho gordo e gostoso !! </p>
         <p>mostro o bom e o ruim não sou tão boa nem tão legal nem tão nada de bom
             sou eu cada dia
         </p>
-        <h2> namorar comigo? </h2>
+        <p>te adoro linda #minhaopiniao </p>
+        <h2>Namora comigo? </h2>
         
 
         <a href="https://youtu.be/T4cdfRohhcg"><button id="sim" > Sim! </button></a>
