--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         .painel{
             margin: auto;
-            background-color: cadetblue;
+            background-color: beige;
             width: 500px;
             height: 500px;
             border-radius: 20px;
