--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
         .painel{
             margin: auto;
-            background-image: "/imagens/background.jpg";
+            background-color: white;
             width: 500px;
             height: 500px;
             border-radius: 20px;
             text-align: center;
-            padding-top: 20px;
+            padding-top: 50px;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         }
         #sim{
