--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 
     <style>
         body{
-            background-image: "background.jpg";
-            background-position: absolute;
+            background: url('background.jpg') fixed no-repeat;
+            background-size:cover;
+            background-position: center;
+            min-height: 100vh;
         }
 
         .painel{
