--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <style>
         body{
-            background: url('background.jpg') fixed no-repeat;
+            background: url('/imagens/background.jpg') fixed no-repeat;
             background-size:cover;
             background-position: center;
             min-height: 100vh;
