mudança texto link

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
     <div class="painel">
-        <h1> Feliz Dia dos Namorados! </h1>
+        <h1> Feliz Dia das Namoradas! </h1>
 
         <div class = "circle-image"> 
         <img src="/imagens/blendha-.gif" height="400" width="400" alt="">
@@ -66,7 +66,7 @@
         <h2>Namora comigo? </h2>
         
 
-        <a href="https://open.spotify.com/intl-pt/track/0X9Fma64ESs7WsuAPi2iLj?si=4d99635bfff34500"><button id="sim" > Sim! </button></a>
+        <a href="https://youtube.com/shorts/1WkmqMQuFVk?feature=share"><button id="sim" > Sim! </button></a>
         <button onmouseover="fuja()" id="nao"> Não! </button>
         
     </div>
